/** @jest-environment setup-polly-jest/jest-environment-node */
const {
  setupPolly,
  setupCacheMock,
  schemaValidate,
} = require("../../../common/test-utils");
const {
  readJSON,
  removeMatchingHints,
  addTestCategory,
} = require("../../../common/utils");
const { attributes, retrieve, findEvents } = require("..");

jest.mock("../../../common/utils", () => ({
  ...jest.requireActual("../../../common/utils"),
  readJSON: jest.fn(),
}));

const isRecording = false;

// Reading the whole London catalogue is hundreds of requests, so retrieve()'s
// fetches replay from the cache files a real run wrote rather than from HTTP
// recordings of every one of them.
jest.mock("../../../common/cache");
setupCacheMock(__dirname, "2026-08-17");

// Hide script output
console.log = () => {};

describe(attributes.name, () => {
  setupPolly(isRecording, __dirname);
  jest.useFakeTimers().setSystemTime(new Date("2026-08-17"));

  describe.each([
    {
      name: "The Refinery Citypoint",
      alternativeNames: ["The Refinery City Point"],
      address: "1 Ropemaker Street, London, EC2Y 9HT, UK",
      geo: { lat: 51.519140879706114, lon: -0.09002136809499772 },
      expectedMatches: 3,
    },
    {
      name: "The Moniker",
      alternativeNames: [],
      address: "25 Fenchurch Avenue, London, EC3M 5AD, UK",
      geo: { lat: 51.51277895188951, lon: -0.08078508800736149 },
      expectedMatches: 3,
    },
    {
      name: "Parlour",
      alternativeNames: ["Parlour Kensal", "The Parlour"],
      address: "5 Regent Street, London, NW10 5LG, UK",
      geo: { lat: 51.52876791379925, lon: -0.2166160120141102 },
      expectedMatches: 4,
    },
  ])("$name", ({ name, alternativeNames, address, geo, expectedMatches }) => {
    it(
      "retrieve and find events",
      async () => {
        const { movieListPage, planDetails, sessionPages } = await retrieve();

        // Make sure the input looks roughly correct
        expect(movieListPage).toBeTruthy();
        expect(Object.keys(planDetails)).toHaveLength(256);
        expect(Object.keys(sessionPages)).toHaveLength(21);

        readJSON.mockImplementation(() => ({
          movieListPage,
          planDetails,
          sessionPages,
        }));

        const cinema = { name, alternativeNames, address, geo };
        const output = await findEvents(cinema);
        expect(
          output.every((movie) =>
            Object.prototype.hasOwnProperty.call(movie, "matchingHints"),
          ),
        ).toBe(true);

        const data = JSON.parse(JSON.stringify(output))
          .map(removeMatchingHints)
          .map(addTestCategory);

        // Make sure the data looks roughly correct
        expect(schemaValidate(data)).toBe(true);
        expect(data).toHaveLength(expectedMatches);
        expect(data).toMatchSnapshot();
      },
      isRecording ? 600_000 : undefined,
    );
  });
});
