// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fever Parlour retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787594400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787767200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787162400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787853600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787940000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787248800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787680800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632375",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787335200000,
      },
    ],
    "showingId": "feverup.com-632375",
    "title": "Taste Film presents Pretty Woman (1990)",
    "url": "https://feverup.com/m/632375",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788890400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788976800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788458400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789149600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788526800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788544800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788804000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/632397",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789063200000,
      },
    ],
    "showingId": "feverup.com-632397",
    "title": "Taste Film presents Moulin Rouge! (2001)",
    "url": "https://feverup.com/m/632397",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791201600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791221400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791288000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791307800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789732800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789752600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790011800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791460800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791480600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792065600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792085400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792152000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792171800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791892800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791912600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790769600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790789400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789473600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789493400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790078400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790098200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789387200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789407000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791806400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791826200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791547200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789646400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789666200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790251200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790271000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791979200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791999000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790683200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790703000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790596800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790616600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789579800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791374400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791394200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790856000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790875800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790164800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790184600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790337600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/669084",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790357400000,
      },
    ],
    "showingId": "feverup.com-669084",
    "title": "Taste Film presents The Lord of The Rings: The Fellowship of The Ring (2001)",
    "url": "https://feverup.com/m/669084",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792778400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793127600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793455200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793473200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792432800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793214000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793368800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793386800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793041200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792605600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793300400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792692000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/692560",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792519200000,
      },
    ],
    "showingId": "feverup.com-692560",
    "title": "Taste Film presents Sinners (2024)",
    "url": "https://feverup.com/m/692560",
  },
]
`;

exports[`Fever The Moniker retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789149600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788696000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788091200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788109200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788613200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788631200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788008400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788026400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789218000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633219",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789236000000,
      },
    ],
    "showingId": "feverup.com-633219",
    "title": "Taste Film presents Snatch (2000)",
    "url": "https://feverup.com/m/633219",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789902000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789920000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794060000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794078000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790427600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790445600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791637200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791655200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790506800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790524800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789822800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789840800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791568800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791716400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791734400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793991600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794139200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695557",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794157200000,
      },
    ],
    "showingId": "feverup.com-695557",
    "title": "Taste Film presents Shrek 2 (2004)",
    "url": "https://feverup.com/m/695557",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792778400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793386800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793534400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793552400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792242000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792260000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792929600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792947600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792173600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793455200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793473200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792846800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/701069",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792864800000,
      },
    ],
    "showingId": "feverup.com-701069",
    "title": "Taste Film presents The Lost Boys (1987)",
    "url": "https://feverup.com/m/701069",
  },
]
`;

exports[`Fever The Refinery Citypoint retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788696000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789822800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789840800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789905600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789923600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1787940000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789754400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788613200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788631200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788177600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789149600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788008400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788026400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788091200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788109200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789300800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789318800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789218000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789236000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/633211",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788544800000,
      },
    ],
    "showingId": "feverup.com-633211",
    "title": "Taste Film presents Friends (1994-2004)",
    "url": "https://feverup.com/m/633211",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793455200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793473200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792321200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793534400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793552400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792846800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792864800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793368800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793386800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792242000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792260000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792778400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792929600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/695606",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792173600000,
      },
    ],
    "showingId": "feverup.com-695606",
    "title": "Taste Film presents Hocus Pocus (1993)",
    "url": "https://feverup.com/m/695606",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794664800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794682800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790341200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790359200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794596400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794060000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794078000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794744000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790524800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790964000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790427600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790445600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1794139200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791111600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791032400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791050400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/696845",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793991600000,
      },
    ],
    "showingId": "feverup.com-696845",
    "title": "Taste Film presents Pulp Fiction (1994)",
    "url": "https://feverup.com/m/696845",
  },
]
`;
